@@ -9,6 +9,10 @@ Release date: TBA
 ..
   Put new features here and also in 'doc/whatsnew/2.14.rst'
 
+* Improved wording of the message of ``deprecated-module``
+
+  Closes #6169
+
 * ``Pylint`` now requires Python 3.7.2 or newer to run.
 
   Closes #4301
